# mime-directory

./: .travis.yml  README.md  mime-directory.cabal  stack-7.8.yaml  stack.yaml
Codec/MIME/ContentType/Text/: Directory.hs
Data/ByteString/Lazy/Char8/: Caseless.hs  Folded.hs
t/: Main.hs  run.sh
