name:           mime-directory
version:        0.1
homepage:       http://code.haskell.org/~mboes/mime-directory.git
synopsis:       A library for parsing/printing text/directory mime type.
description:
        A library for parsing/printing text/directory mime type.
category:       Text
license:        LGPL
copyright:      (c) 2008. Mathieu Boespflug <mboes@tweag.net>
cabal-version:  >= 1.2.0
build-type:     Simple
tested-with:    GHC == 6.10

library
        build-depends:   base >= 3, bytestring >= 0.9, regex-pcre >= 0.94,
                         old-locale, time >= 1.1
        extensions:      OverloadedStrings, EmptyDataDecls, PatternGuards
        exposed-modules: Codec.MIME.ContentType.Text.Directory
